--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,21 @@
   }
 }
 
+html {
+  font-family: var(--font-play);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-hanken);
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
